# ChallengingMod

./: .gitignore  CMakeLists.txt  README.md
ChallengingMod/: build-client.bat  build-server.bat  build.bat  mod.bat
ChallengingMod/src/: ai.qc  combat.qc  fight.qc  progs.src  weapons.qc  world.qc
ChallengingMod/src/csqc/: camera.qc  csprogs.src  view.qc
ChallengingMod/src/ogre/: ogre_init.qc
ChallengingMod/src/soldier/: soldier.qc  soldier_fight.qc  soldier_init.qc
ChallengingMod/src/ssqc/: fight.qc  monsters.qc  player.qc  progs.src  ssdefs.qc  weapons.qc  world.qc
ChallengingMod/src/ssqc/ogre/: ogre.qc  ogre_fight.qc
ChallengingMod/src/ssqc/soldier/: soldier.qc  soldier_fight.qc  soldier_init.qc
HardMod/src/: ogre.qc  soldier.qc
Quake/: bgmusic.c  common.h  cvar.h  host.c  image.c  lodepng.c  lodepng.h  menu.c  mod.bat  net_dgrm.c  net_main.c  net_sys.h  net_udp.c  net_udp.h  net_win.c  pr_ext.c  quakedef.h  sbar.c  sys_sdl_unix.c
Quake/client/: cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h
Quake/gl/: gl_draw.c  gl_fog.c  gl_mesh.c  gl_model.c  gl_model.h  gl_refrag.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_screen.c  gl_sky.c  gl_texmgr.c  gl_vidsdl.c  gl_warp.c
Quake/net/: net_defs.h  net_dgrm.c  net_loop.c  net_main.c  net_udp.c  net_win.c  net_wins.c  net_wipx.c
Quake/progs/: player.qc  soldier.qc  weapons.qc
Quake/render/: r_alias.c  r_brush.c  r_part.c  r_part_fte.c  r_sprite.c  r_world.c
Quake/server/: sv_main.c  sv_move.c  sv_phys.c  sv_user.c
Quake/snd/: snd_codec.c  snd_dma.c  snd_flac.c  snd_mem.c  snd_mikmod.c  snd_mix.c  snd_modplug.c  snd_mp3.c  snd_mp3tag.c  snd_mpg123.c  snd_opus.c  snd_sdl.c  snd_umx.c  snd_voip.c  snd_vorbis.c  snd_wave.c  snd_xmp.c
